--- a/style.css
+++ b/style.css
@@ -13,30 +13,10 @@ body {
 
 /* Navbar */
 header {
+    font-family: 'Times New Roman';
     background: #111;
     padding: 15px 40px;
 }
-
-#leftwheel {
-	position: fixed;
-    left: -200px;
-    top: 15%;
-    transform: translateY(-50%);
-    pointer-events: none;
-    width: 400px;
-    transform: rotate(0deg); /* rotation starts cleanly */
-}
-
-#rightwheel {
-	position: fixed;
-    right: -200px;
-    top: 15%;
-    transform: translateY(50%);
-    pointer-events: none;
-    width: 400px;
-    transform: rotate(0deg); /* rotation starts cleanly */
-}
-
 
 .navbar {
     display: flex;
@@ -63,10 +43,13 @@ header {
     text-decoration: none;
 }
 
+
+
 /* Hero Section */
 .hero {
+    font-family: 'Times New Roman';
     height: 75vh;
-    background: linear-gradient(135deg, #222, #444);
+    background: linear-gradient(135deg, #707070, #000000);
     color: white;
     display: flex;
     flex-direction: column;
@@ -77,6 +60,7 @@ header {
 }
 
 .hero h2 {
+    font-family: 'Times New Roman';
     font-size: 45px;
     margin-bottom: 10px;
 }
@@ -88,34 +72,49 @@ header {
 .hero p {
     font-size: 18px;
     margin-bottom: 25px;
-    max-width: 500px;
+    max-width: 1000px;
 }
+
+
+
+
 
 .btn {
     padding: 12px 25px;
     background: #ffae00;
     color: black;
     text-decoration: none;
-    border-radius: 10px;
+    border-radius: 20px;
+    font-size: 18px;
     font-weight: bold;
-    transition: 0.2s ease;
+    transition: 0.5s ease;
 }
 
 .btn:hover {
-    background: #ffcc65;
+    background: #000000;
 }
+
+
 
 /* Sections */
 .section {
+    text-align: justify;
+    font-family: 'Times New Roman';
+    word-spacing: normal;
     padding: 80px 40px;
-    max-width: 1000px;
+    max-width: 1200px;
+    font-size: 18px;
     margin: auto;
 }
 
-.section h2 {
+.section h2 {   
+    font-family: 'Times New Roman';
+    text-align: justify;
     font-size: 32px;
     margin-bottom: 20px;
 }
+
+
 
 /* Project Grid */
 .project-grid {
@@ -137,6 +136,8 @@ header {
     box-shadow: 0 12px 25px rgba(0,0,0,0.15);
 }
 
+
+
 /* Scroll Reveal Animation */
 .reveal {
     opacity: 0;
@@ -151,7 +152,7 @@ header {
 
 .highlight {
     transform: scale(1.1);
-    color: #ffae00;
+    color: #ff0000;
     transition: all 0.3s ease;
 }
 .Wordshighlight {
@@ -159,14 +160,18 @@ header {
     transition: all 0.3s ease;
 }
 
+
+
 /* Footer */
 footer {
     background: #111;
     color: white;
     text-align: center;
-    padding: 20px;
-    margin-top: 50px;
+    padding: 50px;
+    margin-top: 100px;
 }
+
+
 
 /* Responsive */
 @media (max-width: 600px) {
@@ -178,16 +183,6 @@ footer {
         padding: 60px 20px;
     }
 }
-
-#particleCanvas {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    z-index: -10;
-    background: #101; /* optional */
-}
-
 .lang-switcher button {
     margin-left: 6px;
     padding: 5px 10px;
