--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ header {
 }
 
 .logo {
+
     color: white;
     font-size: 24px;
     letter-spacing: 1px;
@@ -39,14 +40,25 @@ header {
 }
 
 .mainBtn {
-    padding: 24px 25px;
-    border-radius: 20px;
-    font-size: 16px;
+    background-color: rgba(0, 0, 0, 0.0); 
+    padding-bottom: 10px;
+    border-radius: 30px;
+    border: 10px solid white;  /* width, style, color */
+    font-size: 20px;
+    font-family: 'Times New Roman';
+    color: white;
+}
+
+.language
+{
+    background-color: rgba(0, 0, 0, 0.0); 
+        border: 10px solid white;  /* width, style, color */
 }
 
 header img {
-    width: 25px;   /* sets the icon width */
-    height: 25px;  /* sets the icon height */
+    padding-top: 10px;
+    width: 30px;   /* sets the icon width */
+    height: 30px;  /* sets the icon height */
     object-fit: contain; /* keeps proportions without stretching */
 }
 
