--- a/style.css
+++ b/style.css
@@ -240,7 +240,6 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 300px;
   color: rgba(255, 255, 255, 0.1);
   z-index: 1;
 }
@@ -251,14 +250,14 @@ footer {
 
 /* Tablets */
 @media (max-width: 1024px) {
-  .bg-text {
+  .project-overlay h3  {
     font-size: 180px;
   }
 }
 
 /* Phones */
 @media (max-width: 600px) {
-  .bg-text {
+  .project-overlay h3  {
     font-size: 96px;
   }
 }
