--- a/style.css
+++ b/style.css
@@ -253,6 +253,28 @@ footer {
 .overlay-content video {
   width: 30%;
 }
+.overlay-content {
+  position: absolute;
+  top: 240px;
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  text-align: justify;
+  line-height: 1.4;
+
+  z-index: 2; /* higher = on top */
+  animation: pop 0.6s ease;
+  font-size: 24px;
+  color: white;
+
+  overflow-y: auto;
+  overflow-x: hidden;
+  font-size: 12px;
+  color: white;
+}
 
 /* Tablets */
 @media (max-width: 1024px) {
@@ -278,10 +300,8 @@ footer {
   .overlay-content video {
     width: 80%;
   }
-}
 
-/* Content on top */
-.overlay-content {
+  .overlay-content {
   position: absolute;
   top: 240px;
   width: 100%;
@@ -290,7 +310,7 @@ footer {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  text-align: justify;
+  text-align: left;
   line-height: 1.4;
 
   z-index: 2; /* higher = on top */
@@ -301,8 +321,11 @@ footer {
   overflow-y: auto;
   overflow-x: hidden;
   font-size: 12px;
-  color: white;
+  color: 
 }
+
+/* Content on top */
+
 .overlay-content a {
   color: rgb(91, 170, 255);
 }
