--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 * {
   margin: 0;
   padding: 0;
+  line-height: 1.3;
   box-sizing: border-box;
   font-family: "Bree Serif", "Chiron GoRound TC", "Kosugi Maru";
 }
@@ -329,19 +330,31 @@ footer {
 
 .overlay-content a {
   color: rgb(91, 170, 255);
+    line-height: 1.4;
 }
 
 .overlay-content-a {
   font-size: 16px;
   color: rgb(227, 255, 102);
+    line-height: 1.4;
+}
+.overlay-content-aps {
+  font-size: 20px;
+    line-height: 1.4;
+}
+.overlay-content-ap {
+  color: rgb(248, 255, 154);
+    line-height: 1.4;
 }
 
 .overlay-content p {
   font-size: 24px;
+    line-height: 1.4;
 }
 
 .overlay-content-p {
   font-size: 20px;
+    line-height: 1.4;
 }
 
 
