--- a/style.css
+++ b/style.css
@@ -5,17 +5,17 @@
   line-height: 1.3;
   box-sizing: border-box;
   font-family: "Bree Serif", "Chiron GoRound TC", "Kosugi Maru";
+  color: rgb(0,0,0,0.4);
 }
 
 /* Navbar */
 header {
   background: #000000;
   padding: 15px 40px;
+
 }
 
-button {
-  border: none;
-}
+
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -96,6 +96,7 @@ header img {
 .hero h2 {
   font-size: 45px;
   margin-bottom: 10px;
+    color: white;
 }
 
 .hero h2 span {
@@ -106,6 +107,7 @@ header img {
   font-size: 18px;
   margin-bottom: 25px;
   max-width: 1000px;
+    color: white;
 }
 
 .btn {
@@ -176,7 +178,7 @@ header img {
   transition: all 0.3s ease;
 }
 .Wordshighlight {
-  color: #352165;
+  color: #1d0062;
   transition: all 0.3s ease;
 }
 
@@ -232,6 +234,7 @@ footer {
   left: 40px;
   font-size: 2.5rem;
   letter-spacing: 2px;
+  color: white;
 }
 
 /* Background big text */
@@ -243,11 +246,12 @@ footer {
   align-items: center;
   color: rgba(255, 255, 255, 0.1);
   z-index: 1;
-}
-/* Default (PC / large screens) */
-.project-overlay h3 {
   font-size: 300px;
 }
+.overlay-content h4 {
+  color: white;
+}
+
 .overlay-content img {
   width: 40%;
 }
@@ -274,21 +278,41 @@ footer {
   overflow-y: auto;
   overflow-x: hidden;
   font-size: 12px;
-  color: white;
 }
 
 .overlay-content p {
   font-size: 24px;
-    line-height: 1.4;
+  line-height: 1.4;
+  color: inherit;
 }
-.overlay-content-aps {
+.overlay-content div{
   font-size: 20px;
-    line-height: 1.4;
+  line-height: 1.4;
+  color: white;
 }
 
+.overlay-content-divsmallfont{
+  font-size: 16px!important;
+  line-height: 1.4;
+  color: white;
+}
+
+/*to highlight word*/
+.overlay-content a {
+  color: rgb(91, 170, 255);
+  line-height: 1.4;
+}
+/*to highlight word*/
 .overlay-content-ap {
   color: rgb(248, 255, 154);
-    line-height: 1.4;
+  line-height: 1.4;
+}
+
+
+.overlay-content-attention {
+  font-size: 16px!important;
+  color: rgb(227, 255, 102)!important;
+  line-height: 1.4;
 }
 
 /* Tablets */
@@ -317,62 +341,56 @@ footer {
   }
 
   .overlay-content {
-  position: absolute;
-  top: 240px;
-  width: 100%;
+    position: absolute;
+    top: 240px;
+    width: 100%;
 
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  text-align: left;
-  line-height: 1.4;
-
-  z-index: 2; /* higher = on top */
-  animation: pop 0.6s ease;
-  font-size: 24px;
-  color: white;
-
-  overflow-y: auto;
-  overflow-x: hidden;
-  font-size: 12px;
-  color: white;
-  } 
-  .overlay-content-aps {
-  font-size: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: left;
     line-height: 1.4;
-}
+
+    z-index: 2; /* higher = on top */
+    animation: pop 0.6s ease;
+    font-size: 24px;
+    color: white;
+
+    overflow-y: auto;
+    overflow-x: hidden;
+    font-size: 12px;
+    color: white;
+  }
 
 .overlay-content p {
   font-size: 20px;
-    line-height: 1.4;
+  line-height: 1.4;
+  color: inherit;
 }
 
-.overlay-content-ap {
-  color: rgb(248, 255, 154);
-    line-height: 1.4;
+.overlay-content-smallfont {
+  font-size: 16px;
+  line-height: 1.4;
+  color: inherit;
 }
-}
-
-/* Content on top */
 
 .overlay-content a {
   color: rgb(91, 170, 255);
-    line-height: 1.4;
+  line-height: 1.4;
 }
 
-.overlay-content-a {
+.overlay-content-attention {
   font-size: 16px;
   color: rgb(227, 255, 102);
-    line-height: 1.4;
+  line-height: 1.4;
+}
 }
 
 
 
-.overlay-content-p {
-  font-size: 20px;
-    line-height: 1.4;
-}
+
+
 
 
 .bottom-bar {
