--- a/style.css
+++ b/style.css
@@ -237,6 +237,15 @@ footer {
   color: white;
 }
 
+.project-overlay strong{
+    position: absolute;
+  top: 30px;
+  left: 40px;
+  font-size: 2.5rem;
+  letter-spacing: 2px;
+  color: white;
+}
+
 /* Background big text */
 .project-overlay h3 {
   margin: 0;
@@ -260,7 +269,7 @@ footer {
 }
 .overlay-content {
   position: absolute;
-  top: 240px;
+  top: 150px;
   width: 100%;
 
   display: flex;
@@ -453,4 +462,5 @@ footer {
   border-radius: 8px;
   border: none;
   cursor: pointer;
+  color: #000000;
 }
