--- a/style.css
+++ b/style.css
@@ -190,6 +190,9 @@ footer {
   padding: 50px;
   margin-top: 100px;
 }
+footer p{
+  color: white!important;
+}
 
 /* Responsive */
 @media (max-width: 600px) {
