--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ header {
   gap: 25px;
 }
 
+
 .mainBtn {
   /* Ensure the border is inside the button dimensions */
   box-sizing: border-box !important;
@@ -74,11 +75,16 @@ header {
 }
 
 header img {
-  padding-top: 5px;
   width: 25px;
-  height: 25px;
-  object-fit: contain;
+
+  background-color: #000000;
 }
+.homepage{
+  background-color: #000000;
+}
+
+
+
 
 /* Hero Section */
 .hero {
@@ -148,7 +154,7 @@ header img {
 }
 
 .project-card {
-  background: white;
+  background: #fdffe6;
   padding: 20px;
   border-radius: 12px;
   box-shadow: 0 3px 15px rgba(0, 0, 0, 0.1);
@@ -158,6 +164,10 @@ header img {
 .project-card:hover {
   transform: translateY(-8px);
   box-shadow: 0 12px 25px rgba(0, 0, 0, 0.15);
+}
+
+.project-card img{
+  border-radius: 25px;
 }
 
 /* Scroll Reveal Animation */
@@ -468,6 +478,68 @@ footer p{
   color: #000000;
 }
 
+.homepage{
+  position: fixed;
+  top: 60px; /* adjust position */
+  left: 10px;
+  width: 220px;
+  background: #111;
+  color: white;
+  border-radius: 12px;
+  padding: 12px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
+
+  opacity: 0;
+  transform: scale(0.9) translateY(-10px);
+  pointer-events: none;
+  transition: 0.25s ease;
+
+  z-index: 1000; /* higher than everything */
+}
+
+.homepage.show{
+  opacity: 1;
+  transform: scale(1) translateY(0);
+  pointer-events: auto;
+}
+
+.homepage button{
+    width: 100%;
+  margin: 6px 0;
+  padding: 10px;
+  border-radius: 8px;
+  border: none;
+  cursor: pointer;
+  color: #000000;
+}
+
+.back-to-top {
+  position: fixed;
+  left: 20px;
+  bottom: 50%;
+  transform: translateY(50%);
+  padding: 12px 14px;
+  background: #111;
+  color: white;
+  border-radius: 12px;
+  text-decoration: none;
+  font-size: 14px;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+  transition: 0.3s ease;
+  z-index: 999;
+}
+
+.back-to-top:hover {
+  background: #4f46e5;
+  transform: translateY(50%) scale(1.1);
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+
+
 .WorkContent {
   line-height: 1.4;
 }
@@ -519,7 +591,7 @@ footer p{
 
 .card {
   margin-top: 50px;
-  background: #eeffa0;
+  background: #f4ffc5;
   color: white;
   padding: 15px;
   border-radius: 12px;
